# mcp-server-solidworks

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.jupyter  INSTALLATION.md  LICENSE  MCP-SETUP.md  Makefile  README.md  claude-config-alternative.json  claude-config-example.json  docker-compose.yml  mcp-server-solidworks  mcp-server-solidworks.bat  mcp-server-solidworks.sh  pyproject.toml  run.py
docs/: system-architecture.mmd
examples/: design_automation_example.py
mcp_server_solidworks/: __init__.py
mcp_server_solidworks/context_builder/: builder.py  knowledge_base.py
mcp_server_solidworks/events/: __init__.py  event_manager.py
mcp_server_solidworks/mcp_host/: server.py
mcp_server_solidworks/prompts/: templates.py
mcp_server_solidworks/solidworks_adapters/: __init__.py  factory.py
mcp_server_solidworks/solidworks_adapters/common/: __init__.py  base_adapter.py
mcp_server_solidworks/tools/: solidworks_tools.py
mcp_server_solidworks/version_manager/: __init__.py  manager.py
notebooks/: solidworks_mcp_tutorial.ipynb
scripts/: build_adapters.py  test_installation.py
src/: __init__.py
src/context_builder/: builder.py  knowledge_base.py
src/events/: event_manager.py
src/mcp_host/: server.py
src/prompts/: templates.py
src/solidworks_adapters/: SolidWorksAdapters.csproj  factory.py
src/solidworks_adapters/common/: base_adapter.py
src/solidworks_adapters/sw2024/: SolidWorksAdapter2024.cs  (+1 more)
src/tools/: solidworks_tools.py
src/version_manager/: manager.py
tests/: test_server.py
