[project]
name = "mcp-server-solidworks"
version = "0.1.0"
description = "MCP server for SolidWorks CAD automation with AI assistance"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mcp>=0.1.0",
    "pythonnet>=3.0.3",
    "pydantic>=2.0",
    "asyncio>=3.4.3",
    "chromadb>=0.4.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "aiofiles>=23.0.0",
    "python-dotenv>=1.0.0",
    "watchdog>=3.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true